# spec-mesh-simp

./: .gitignore  .polyscope.ini  README.md  activate.sh  env_mac.yml  pyproject.toml
cpp/: CMakeLists.txt  README.md
cpp/src/: main.cpp  mesh_adjacency.cpp  mesh_adjacency.h  spectral_cost.cpp  spectral_cost.h  spectral_simplify.cpp  spectral_simplify.h
docs/: Spectral-Mesh-Simplification.md  eigenanalysis.md
scripts/: compare_fmaps.py  qem_simplify.py  run_comparison.sh  simplify.py
scripts/specsimp_tutorial/: 01_laplacian.py  01b_cotangent_weights.py  02_eigenmodes.py  03_qem_simplification.py  04_functional_maps.py  06_fmap_comparison.py
scripts/stiffness_tutorial/: 01_stiffness_matrix.py  shell_stiffness.py  stiffness-matrix.md
scripts/tutorial/: 01_laplacian.py  03_qem_simplification.py  05_spectral_simplification.py  06_fmap_comparison.py
src/specsimp/: __init__.py  adjacency.py  colors.py  eigen.py  functional_map.py  laplacian.py  mesh.py  quadrics.py  simplify_qem.py  simplify_spectral.py  spectral_cost.py
tests/: conftest.py  test_adjacency.py  test_eigen.py  test_functional_map.py  test_laplacian.py  test_mesh.py  test_quadrics.py  test_simplify_qem.py  test_spectral.py
